# AI4DBCode

./: .gitignore  README.md
CardinalityEstimationTestbed/: README.md
CardinalityEstimationTestbed/Overall/neurocard/update/factorized_sampler_lib/pyext-rustlib/: Cargo.toml
CardinalityEstimationTestbed/Synthetic/: generate_data_sql.py  get_result.py  get_truecard.py  physical_db.py  prepare_data_sql.py  run_deepdb.py  run_mscn.py  run_mscn_xgb_nn_trainnum.py  run_xgb_nn.py
DBTunner/src-QTune/: config.ini  config_example.ini  configs.py  draw.py  environment.py  generate_sysbench_insert_and_delete_query.py  get_res_data_from_file.py  get_sysbench_workload_from_slow_file.py  get_workload_from_file.py  knob-effect-test.py  main.py  model.py  requirements.txt  配置文档.md  (+4 more)
DatabasePartition/: README.md  app_factory.py  install_db_cluster.md  install_db_cluster_cn.md  requirements.txt  run.sh  test_connect.py  test_partition_key_evaluation.py  test_partition_key_selection.py  train_partition_models.py  train_partition_models_data_preparation.py  train_partition_models_self_supervised.py  train_partition_models_supervised.py  wsgi_gunicorn.py
FACE/: .gitignore  LICENSE  README.md  environment.yml
PerformancePredictor/: Database.py  GCN.py  README.md  config.ini  dataloader.py  extract_and_generate.py  graph-generation-merged.py  merge.py  performance_graphembedding_checkpoint.py  requirements.txt
RTOS/: CostTraining.py  DQN.py  ImportantConfig.py  JOBParser.py  LatencyTuning.py  PGUtils.py  TreeLSTM.py  readme.md  run.py  sqlSample.py  train.py
Spark-Tuning/: README.md
(+2734 files in other folders)
