[package]
name = "pyext-rustlib"
version = "0.1.0"
authors = ["Frank Luan <lsf@berkeley.edu>"]
edition = "2018"

[lib]
name = "rustlib"
crate-type = ["dylib"]

[dependencies]
bincode = "1.2"
ndarray = { version = "0.13", features = ["rayon"] }
numpy = "0.8"
pyo3 = { version = "0.9", features = ["extension-module"] }
rand = { version = "0.7", features = ["small_rng"] }
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
